# ChangeLog for media-sound/alsa-utils
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-utils/ChangeLog,v 1.222 2007/12/29 06:37:59 robbat2 Exp $

  29 Dec 2007; Robin H. Johnson <robbat2@gentoo.org> files/alsasound.confd,
  files/alsasound.initd:
  Add variables to block the automatic module load/unload, to help out cases
  where they do weird things, like my G5 with snd-aoa.

  24 Oct 2007; Christian Heim <phreak@gentoo.org> -alsa-utils-1.0.13.ebuild,
  -alsa-utils-1.0.14_rc1.ebuild, -alsa-utils-1.0.15_rc1.ebuild:
  Cleaning up old ebuilds.

  22 Oct 2007; Raúl Porcel <armin76@gentoo.org> alsa-utils-1.0.14.ebuild:
  alpha/ia64 stable wrt #189155

*alsa-utils-1.0.15 (18 Oct 2007)

  18 Oct 2007; Christian Heim <phreak@gentoo.org> +alsa-utils-1.0.15.ebuild:
  Version bump, finally at 1.0.15.

*alsa-utils-1.0.14-r2 (03 Oct 2007)

  03 Oct 2007; Christian Heim <phreak@gentoo.org>
  +files/alsa-utils-1.0.14-alsaconf-modules-update.patch,
  +alsa-utils-1.0.14-r2.ebuild:
  Revision bump, removing the wrong call to modules-update, module-init-tools
  has been stable for a looong while (#193303 thanks to Jack Kelly 
  <weldingmaskman at hotmail.com>).

  17 Sep 2007; Christian Heim <phreak@gentoo.org>
  +files/alsa-utils-1.0.15_rc1-seq.patch, alsa-utils-1.0.15_rc1.ebuild:
  alsa-utils-1.0.15_rc1 needs some more "convincing".

*alsa-utils-1.0.15_rc1 (17 Sep 2007)

  17 Sep 2007; Christian Heim <phreak@gentoo.org>
  +alsa-utils-1.0.15_rc1.ebuild:
  New release candidate for alsa-utils.

*alsa-utils-1.0.14-r1 (17 Sep 2007)

  17 Sep 2007; Christian Heim <phreak@gentoo.org>
  +files/alsa-utils-1.0.14-remove-debug-printing.patch,
  +alsa-utils-1.0.14-r1.ebuild:
  Add a patch from upstream, removing a debug print
  (http://hg-mirror.alsa-project.org/alsa-utils/rev/b230fef1ea76 - #184716
  thanks to Mario Bachmann <grafgrimm77 at gmx.de>).
