@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX alsa-modules.conf-rc 1028 RMD160 8e115310eb0e13e08b21304c98a78e721be0029a SHA1 7a2b5fed91fa640894efaf2f557eb2b04aff1a40 SHA256 6060c101ca0793ea80e2b6b5bb8d6b118325092788ff26f07c280dd1ff546570
 AUX alsa-utils-1.0.11_rc2-nls.patch 587 RMD160 9dff7b5f75295834457ff93a13d485d66685cdf3 SHA1 79009e9a09e8f3518cbab2d7f00eb4fb3cb410aa SHA256 c68819938d0241dd38293b0e411921b3ad580390183880fd364361fe71cb6d51
 AUX alsa-utils-1.0.11_rc5-alsaconf-redirect.patch 649 RMD160 cfb4dac18bfacf45bbb78e0c3278b431d5015d30 SHA1 02a306c5e555fe6423fb5e10b9c7fc40514b09c2 SHA256 e4da9da92bb88fbf66897da35b588bb81b6d4899a129d59237fd4d65cdd59a55
@@ -13,10 +16,19 @@ AUX alsasound.initd 6480 RMD160 4e67306b871e11181442b2f8a2065c72745450ab SHA1 9d
 DIST alsa-utils-1.0.14.tar.bz2 1013872 RMD160 e912588fc6ad223c7176847b8f99c80dd2ca7bb5 SHA1 767e71805ee606a4589bda9e95babbca61f9e92f SHA256 307d630f0ed15e7e92fa35dc0c961737fa9aed22bd7a4a6054a72f85145fa5cb
 DIST alsa-utils-1.0.14rc2.tar.bz2 981123 RMD160 9975bc5c71df585ad1818647a1abb2be68910403 SHA1 6b1556930e413764ef71e7097d3436999ae8e4eb SHA256 306bd7c4436c1c56a0a499317e23b5b58aea3718df17c138ab0df56fd9bf3e0c
 DIST alsa-utils-1.0.15.tar.bz2 1014199 RMD160 0487b7f85b719d845f1f78daa1f906119df8251c SHA1 61e922f44dd8e2ce1a5595facd47b2eb583f9509 SHA256 3bb546e873df39159812168180eeff14b13620c653d90739ac0a0912e898aeac
+DIST alsa-utils-1.0.16rc1.tar.bz2 1015555 RMD160 f679044994f3b1661fbdc9895835333efc29dd25 SHA1 cd85d04eab2677077de1e43ab831294be820b2af SHA256 2729783d9d4275d742aad2107cfe2e38ac1f9586e32402350c5be86089f66c17
 EBUILD alsa-utils-1.0.14-r1.ebuild 2307 RMD160 a61ce4b98aefd267d30f59f95ee2a027407dfeee SHA1 90ded9c2023fa5fe61043243f502bf76725ad3ed SHA256 84681dc48af3b777016dd5fec1d553b06c1db1d2c2908e84fcc39ee98a4428f6
 EBUILD alsa-utils-1.0.14-r2.ebuild 2364 RMD160 6de2ded97a4c3d83c74df63146cd6f0059af5fee SHA1 a56ba02496c31ec2329f65e5b7ac012168abc5d7 SHA256 be5415900361544144a2b8bf753f38e541cbf2490c9914dc0e0d748fe0e9b271
 EBUILD alsa-utils-1.0.14.ebuild 2243 RMD160 9c6f53b9a59317408cfc1f12a4451017ae60be7b SHA1 c6cc258a884f7cf759aa046d9c9f52a093e59212 SHA256 7e77d2c80b16cc988299ff36df94a06a8eae6850a4da8a1e5a8a42e261580dd0
 EBUILD alsa-utils-1.0.14_rc2-r3.ebuild 2252 RMD160 a6e22f35ff9c5bb88cda6d61a0711899bdbb4ee3 SHA1 be48b9ab70f58f4c3e651d16c511713371178bd2 SHA256 d76c90e6a2ffeb0237939c151f935963f98d417c7603a9fd21c61959e75b3a4e
 EBUILD alsa-utils-1.0.15.ebuild 2260 RMD160 523d2b8b4d40f8faff9b64a389e0a96c27fcb29f SHA1 22f209ad3a87bf1623b78aa9da6703f376adfa99 SHA256 acbf637356394e9ee1a818b9a12897310e1451d8eda757713347ef072d51ddce
-MISC ChangeLog 33577 RMD160 892c69405ad08e17cf64153e52313bf8cd618d04 SHA1 a039ca920b27788cc01fac548e336db1f8bbd00f SHA256 55997d0307c2c14b7c69bc0900264b6e8fa811228a90ca20cb34787ca1efa674
+EBUILD alsa-utils-1.0.16_rc1.ebuild 2266 RMD160 d81bb08901aa1dfdf54ce85aeb318ddb889abb4c SHA1 7dc55178c49a94ba1bd81e97d95e51c4a415b6eb SHA256 1e6f550d57adbbdd4ef38d3ecbca386748aae957489153dfc151c3c2fc8baedb
+MISC ChangeLog 33731 RMD160 4189aa2c8a0b644c041288620f3f6f6f0851dcd8 SHA1 a833b90c20e2648daf2a953d11f98ef7ce804b9b SHA256 f1a51325fb46cac6302896f145cea5212374b8f5aaa8f2f95767494ccca77571
 MISC metadata.xml 220 RMD160 e49f8bb330d1798cd2c8ee5335cef1784f0d7ccb SHA1 1b895fe6cae4b8eab08ba1a6a1212baf4b4b4105 SHA256 8570ef11cd59b0d8edb71e78eecaec423616836b10eacb86bee0de941f0ae054
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.7 (GNU/Linux)
+
+iD4DBQFHoeIsp5vW4rUFj5oRAlHtAJi2nCWXxYUY+4gLqb59EY092ymMAKC8qix/
+6f/7B4c/+jcV4n+cic4izw==
+=Xkqc
+-----END PGP SIGNATURE-----
