@@ -1,6 +1,12 @@
 # ChangeLog for media-sound/alsa-utils
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-utils/ChangeLog,v 1.222 2007/12/29 06:37:59 robbat2 Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-utils/ChangeLog,v 1.223 2008/01/31 14:54:17 chainsaw Exp $
+
+*alsa-utils-1.0.16_rc1 (31 Jan 2008)
+
+  31 Jan 2008; Tony Vroon <chainsaw@gentoo.org>
+  +alsa-utils-1.0.16_rc1.ebuild:
+  Version bump, for bug #207427.
 
   29 Dec 2007; Robin H. Johnson <robbat2@gentoo.org> files/alsasound.confd,
   files/alsasound.initd:
